# pluely

./: LICENSE  README.md  SYSTEM_AUDIO_SETUP.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  general-issue.yml
.github/workflows/: publish.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  info.plist  pluely.desktop  tauri.conf.json
src-tauri/capabilities/: cross-platform.json  default.json
src-tauri/src/: activate.rs  api.rs  audio.rs  lib.rs  main.rs  shortcuts.rs  window.rs
src-tauri/src/speaker/: commands.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/components/: index.ts
src/components/Header/: index.tsx
src/components/Markdown/: index.tsx
src/components/Selection/: index.tsx
src/components/TextInput/: index.tsx
src/components/completion/: Audio.tsx  AutoSpeechVad.tsx  Files.tsx  Input.tsx  Screenshot.tsx  Speech.tsx  index.tsx  useCompletion.ts
src/components/custom-provider/: Manage.tsx  deleteCustomProvider.tsx  index.tsx
src/components/history/: index.tsx  (+4 more)
src/config/: ai-providers.constants.ts  constants.ts  index.ts  stt.constants.ts
src/contexts/: app.context.tsx  theme.context.tsx
src/hooks/: index.ts  useCompletion.ts  useCustomProvider.ts  useCustomSttProviders.ts  useGlobalShortcuts.ts  useHistory.ts  useHotkeys.ts  useSettings.ts  useSystemAudio.ts  useWindow.ts
src/lib/: api.ts  chat-history.ts  completion.ts  curl-validator.ts  index.ts  platform.instruction.ts  storage.ts
src/types/: ai-provider.type.ts  completion.hook.ts  completion.ts  context.type.ts  index.ts  settings.hook.ts  settings.ts  stt.types.ts
(+60 files in other folders)
